<resources>
    <string name="app_name">TravelBee</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="musers">Users</string>
    <string name="mwallet">Wallet</string>
    <string name="logout">Logout</string>
    <string name="search">Search</string>
    <string name="chat_list">Chat List</string>
    <string name="mlogin">Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="users">Users</string>
    <string name="home">Home</string>
    <string name="profile">Profile</string>
    <string name="wallet">Wallet</string>
    <string name="to_do">To-do</string>
    <string name="chats">Chats</string>
    <string name="his_name">His Name</string>
    <string name="online">online</string>
    <string name="start_typing">Start typing</string>
    <string name="his_message">His Message</string>
    <string name="delivered">delivered</string>
    <string name="deliveredMy">delivered</string>
    <string name="not_have_account_register">Not have account? Register</string>
    <string name="forgot_password_recover">Forgot Password? Recover</string>
    <string name="mainRegister">Register</string>
    <string name="mainLogin">Login</string>

    //Kavindu
    <string name="tv_title">Title</string>
    <string name="tv_location">Location</string>
    <string name="tv_date">Date</string>
    <string name="tv_description">Description</string>
    <string name="et_title" />
    <string name="et_location" />
    <string name="et_date" />
    <string name="et_description" />
    <string name="tv_image">Image</string>
    <string name="btn_upload">Upload</string>
    <string name="btn_cancel">Cancel</string>
    <string name="tv_heading" />
    <string name="btn_edit">Edit</string>
    <string name="btn_delete">Delete</string>
    <string name="displayTitle" />
    <string name="displayLocation" />
    <string name="displayDate" />
    <string name="displayDescription" />
    <string name="btn_update">Update</string>
    <string name="tv_calculator">Distance Calculator</string>
    <string name="tv_source">Source Location</string>
    <string name="tv_sourceLocation" />
    <string name="et_sourceLocation" />
    <string name="tv_destination">Destination Location</string>
    <string name="tv_destLocation" />
    <string name="et_destLocation" />
    <string name="tv_distance">Distance</string>
    <string name="tv_calculatedDistance" />
    <string name="et_distance" />
    <string name="btn_calculate">Calculate</string>
    <string name="tv_splashTitle">Powered by</string>
    <string name="tv_groupName">ByteMinions</string>
    <string name="title_activity_navigation_bar">NavigationBar</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="fab_content_desc" />

    //manushi
    <string name="todo_Title">Plan</string>
    <string name="todo_SubTitle">subtitle</string>
    <string name="Description">todo_Description</string>
    <string name="edit_title">edit_title</string>
    <string name="tv_subtitle">tv_subtitle</string>
    <string name="edit_subtitle">edit_subtitle</string>
    <string name="tv_desc">tv_desc</string>
    <string name="edit_desc">edit_desc</string>
    <string name="btn_celcius">Celcius</string>
    <string name="btn_fahrenhite">Fahrenhite</string>
    <string name="btn_temp">Calculate</string>
    <string name="camount">currency amount</string>
    <string name="txtCity" />
    <string name="txtTime" />
    <string name="txtValue" />
    <string name="txtTitleFeelLike" />
    <string name="txtValueFeelLike" />
    <string name="txtTitleHumididty" />
    <string name="txtValueHumididty" />
    <string name="txtTitleVision" />
    <string name="txtValueVision" />
    <string name="YourCity" />
    <string name="btn_download" />
    <string name="tv_display_value" />
    //sandani
    <string-array name="items">
        <item>select item</item>
        <item>Transport</item>
        <item>Food</item>
        <item>Entertainment</item>
        <item>Other</item>
    </string-array>




</resources>