<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="15dp"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="116dp"
        android:layout_marginBottom="20dp"
        android:scaleType="fitXY"
        />

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="382dp"
        android:layout_height="25dp"
        android:layout_marginBottom="10dp"
        android:hint="@string/tv_title"
        android:text="WHAT'S YOUR PLAN?"

        android:textAlignment="center"
        android:textColor="@color/black"/>

    <EditText
        android:id="@+id/edit_title"
        android:layout_width="311dp"
        android:layout_height="41dp"
        android:layout_gravity="center"

        android:layout_marginBottom="20dp"

        android:hint="@string/edit_title" />

    <TextView
        android:layout_width="379dp"
        android:textColor="@color/black"
        android:layout_height="25dp"
        android:hint="@string/tv_subtitle"
        android:textAlignment="center"
        android:text="WHEN IS IT?"  android:layout_marginBottom="10dp"/>

    <EditText
        android:id="@+id/edit_subtitle"
        android:layout_width="308dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"

        android:layout_marginBottom="20dp"
        android:hint="@string/edit_subtitle" />

    <TextView
        android:layout_width="383dp"
        android:textColor="@color/black"
        android:textAlignment="center"
        android:layout_height="35dp"
        android:hint="@string/tv_desc"
        android:text="DESCRIPTION"
        android:layout_marginBottom="10dp"/>

    <EditText
        android:id="@+id/edit_desc"
        android:layout_width="308dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="20dp"
        android:hint="@string/edit_desc" />

    <LinearLayout
        android:layout_width="259dp"
        android:layout_height="52dp"
        android:layout_gravity="center">

        <Button
            android:id="@+id/btn_submit"
            android:layout_width="170dp"
            android:layout_height="match_parent"
            android:layout_gravity="left"

            android:background="@color/white"
            android:backgroundTint="@color/teal_700"
            android:text="Task Add"

            android:textColor="#000" />

        <Button
            android:id="@+id/btn_open"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_marginRight="5dp"
           
            android:backgroundTint="#00BCD4"
            android:text="ToDos"
            android:textColor="@color/white" />
    </LinearLayout>


</LinearLayout>