<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
   android:background="@color/teal_700"
    android:id="@+id/rlMain_Ac"
    tools:context=".WeatherActivity">

    <RelativeLayout
        android:id="@+id/rlWeather"
        android:layout_width="377dp"
        android:layout_height="764dp"


        >


        <RelativeLayout
            android:id="@+id/rlMain"
            android:layout_width="match_parent"
            android:layout_height="match_parent"

            android:padding="45dp">

            <TextView
                android:id="@+id/txtCity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-medium"
                android:hint="@string/txtCity"
                android:text="City"
                android:textColor="#000"
                android:textSize="32dp" />

            <TextView
                android:id="@+id/txtTime"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_below="@id/txtCity"

                android:fontFamily="sans-serif"
                android:hint="@string/txtTime"
                android:text="Time"
                android:textColor="#000"
                android:textSize="16dp" />

            <ImageView
                android:id="@+id/imgIcon"
                android:layout_width="116dp"
                android:layout_height="72dp"
                android:layout_below="@id/txtTime"

                android:layout_marginTop="9dp"
                android:src="@drawable/phc" />

            <TextView
                android:id="@+id/txtValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@id/imgIcon"
                android:layout_alignParentRight="true"
                android:fontFamily="sans-serif-condensed-light"
                android:hint="@string/txtValue"
                android:text="3°"
                android:textColor="@color/layouts"
                android:textSize="70dp" />

            <RelativeLayout
                android:id="@+id/rlSub"
                android:layout_width="296dp"
                android:layout_height="wrap_content"

                android:layout_below="@+id/imgIcon"
                android:layout_marginTop="12dp"
                android:background="#ffffff"
                android:padding="16dp">

                <ImageView

                    android:id="@+id/imgFeelLike"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/temp" />

                <TextView
                    android:id="@+id/txtTitleFeelLike"
                    android:layout_width="287dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_toRightOf="@+id/imgFeelLike"
                    android:hint="@string/txtTitleFeelLike"
                    android:text="Feel Like"
                    android:textSize="16dp" />

                <TextView
                    android:id="@+id/txtValueFeelLike"
                    android:layout_width="271dp"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/txtTitleFeelLike"
                    android:layout_marginLeft="10dp"
                    android:layout_toRightOf="@id/imgFeelLike"
                    android:hint="@string/txtValueFeelLike"
                    android:text="7°"
                    android:textSize="20dp" />

                <ImageView
                    android:id="@+id/imgHumidity"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/imgFeelLike"
                    android:layout_marginTop="30dp"
                    android:src="@drawable/humidity" />

                <TextView
                    android:id="@+id/txtTitleHumidity"
                    android:layout_width="266dp"
                    android:layout_height="wrap_content"
                    android:layout_alignTop="@id/imgHumidity"
                    android:layout_marginLeft="10dp"
                    android:layout_toRightOf="@+id/imgHumidity"
                    android:hint="@string/txtTitleHumididty"
                    android:text="Humidity"
                    android:textSize="16dp" />

                <TextView
                    android:id="@+id/txtValueHumidity"
                    android:layout_width="267dp"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/txtTitleHumidity"
                    android:layout_marginLeft="10dp"
                    android:layout_toRightOf="@id/imgHumidity"
                    android:hint="@string/txtValueHumididty"
                    android:text="7°"
                    android:textSize="20dp" />

                <ImageView
                    android:id="@+id/imgVision"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/imgHumidity"
                    android:layout_marginTop="30dp"
                    android:src="@drawable/vision" />

                <TextView
                    android:id="@+id/txtTitleVision"
                    android:layout_width="266dp"
                    android:layout_height="wrap_content"
                    android:layout_alignTop="@id/imgVision"
                    android:layout_marginLeft="10dp"
                    android:layout_toRightOf="@+id/imgVision"
                    android:hint="@string/txtTitleVision"
                    android:text="Vision"
                    android:textSize="16dp" />

                <TextView
                    android:id="@+id/txtValueVision"
                    android:layout_width="270dp"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/txtTitleVision"
                    android:layout_marginLeft="10dp"
                    android:layout_toRightOf="@id/imgVision"
                    android:hint="@string/txtValueVision"
                    android:text="7°"
                    android:textSize="20dp" />

            </RelativeLayout>

            <EditText
                android:id="@+id/edt_input"
                android:layout_width="220dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="80dp"
                android:layout_marginTop="-3dp"
                android:hint="@string/YourCity"
                android:minHeight="48dp" />


        </RelativeLayout>


    </RelativeLayout>
    <Button
        android:id="@+id/btnLoading"
        android:layout_width="148dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="99dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="98dp"
        android:layout_marginBottom="50dp"
        android:background="@color/layouts"
        android:hint="@string/btn_download"
        android:onClick="loading"
        android:text="get weather details" />

</RelativeLayout>
