<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DistanceCalculator"
    android:background="@drawable/light_blue_gradient">

    <TextView
        android:id="@+id/tv_calculator"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="7dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="64dp"
        android:fontFamily="@font/open_sans_semibold"
        android:text="Temperature Calculator"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/tv_temp_enter"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_temp_enter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginBottom="18dp"
        android:fontFamily="@font/allerta"
        android:text="Enter Temperature"
        android:textColor="@color/layouts"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/et_temp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_calculator" />

    <Button
        android:id="@+id/btn_temp"
        android:layout_width="265dp"
        android:layout_height="72dp"
        android:layout_marginTop="16dp"
        android:backgroundTint="@color/buttons"
        android:text="@string/btn_temp"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_calculatedTemp"
        app:layout_constraintVertical_bias="0.14" />

    <TextView
        android:id="@+id/tv_calculatedTemp"
        android:layout_width="330dp"
        android:layout_height="59dp"
        android:layout_marginTop="17dp"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.469"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/temp_name" />

    <EditText
        android:id="@+id/et_temp"
        android:layout_width="336dp"
        android:layout_height="55dp"
        android:layout_marginBottom="15dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/radioGroup"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_temp_enter" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="181dp"
        android:layout_height="97dp"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_temp">

        <RadioButton
            android:id="@+id/btn_celcius"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_celcius"
            android:textColor="@color/layouts"
            android:textSize="20sp" />

        <RadioButton
            android:id="@+id/btn_fahrenhite"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_fahrenhite"
            android:textColor="@color/layouts"
            android:textSize="20sp" />
    </RadioGroup>

    <TextView
        android:id="@+id/temp_name"
        android:layout_width="156dp"
        android:layout_height="25dp"
        android:layout_marginTop="16dp"
        android:textAlignment="center"
        android:textColor="@color/layouts"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/tv_calculatedTemp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup" />


</androidx.constraintlayout.widget.ConstraintLayout>